Generalize z-indices, fix search z-index (#4271)

--- a/angular/core/components/group_page/group_theme/group_theme.scss
+++ b/angular/core/components/group_page/group_theme/group_theme.scss
@@ -8,7 +8,7 @@
   top: 0;
   width: 100%;
   height: 320px;
-  z-index: 0;
+  z-index: $z-zero;
   &:hover .group-theme__upload-photo {
     button { background: $list-hover-transparent-color; }
     .group-theme__upload-help-text { opacity: 1; }
