--- a/angular/core/components/install_slack/progress/install_slack_progress.scss
+++ b/angular/core/components/install_slack/progress/install_slack_progress.scss
@@ -28,7 +28,7 @@
   height: 16px;
   border-radius: 100%;
   background: $background-color;
-  z-index: 1;
+  z-index: $z-low;
   label {
     font-weight: normal;
     text-align: center;
