--- a/angular/core/components/thread_page/comment_form/edit_comment_form.scss
+++ b/angular/core/components/thread_page/comment_form/edit_comment_form.scss
@@ -4,5 +4,5 @@
 }
 
 .edit-comment-form .emoji-picker__menu {
-  z-index: 10;
+  z-index: $z-low;
 }
